--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://bankifsc.mysql.database.azure.com:3306/db_bank?zeroDateTimeBehavior=convertToNull&useSSL=true&requireSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=subhash@bankifsc
-spring.datasource.password=Password@123
+spring.datasource.url=jdbc:mysql://url:3306/db_bank?zeroDateTimeBehavior=convertToNull&useSSL=true&requireSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=
+spring.datasource.password=
 
 
 jwt.secret=ifscapi
